# explainability

./: .gitignore  Classification_Categorical_Titanic-shapash.ipynb  Classification_Categorical_Titanic-v2.ipynb  Classification_Categorical_Titanic.ipynb  Classification_SHAP_Comparison.ipynb  Explain_Analysis_Classification.ipynb  Product_Classification_Exploration.ipynb  Product_Classification_S3.ipynb  README.md  Text_Classification-Logistic-S1.ipynb  Text_Classification-Logistic.ipynb  Text_Classification-S2.ipynb  Text_Classification.ipynb  Titanic-Simple.ipynb  pyproject.toml
data_test/: dim_product_clean.csv  srp_dim.xlsx  titanic.csv
